--- a/run-jcstress-with-jdk-23/.gitignore
+++ b/run-jcstress-with-jdk-23/.gitignore
@@ -2,12 +2,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/jcstress-results-*.bin.gz
+/results/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
