--- a/StatefulDependencyInjection/.editorconfig
+++ b/StatefulDependencyInjection/.editorconfig
@@ -6,4 +6,7 @@ csharp_style_var_when_type_is_apparent = true
 csharp_style_var_for_built_in_types = true
 csharp_style_var_elsewhere = true
 
+max_line_length = 160
+resharper_csharp_wrap_lines = false
+
 insert_final_newline = true
