--- a/AzureStorageBlobsAppendBlobSetMetadata/AzureStorageBlobsAppendBlobSetMetadata/AzureStorageBlobsAppendBlobSetMetadata.csproj
+++ b/AzureStorageBlobsAppendBlobSetMetadata/AzureStorageBlobsAppendBlobSetMetadata/AzureStorageBlobsAppendBlobSetMetadata.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0"/>
+    </ItemGroup>
+
 </Project>
